// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен отрендерить карусель в десктопной версии 1`] = `
<div
  className="CarouselUniversal  CarouselUniversal_dir_horizontal"
>
  <div
    className="CarouselUniversal__header"
  >
    <div
      className="CarouselUniversal__title"
    >
      Какой-то заголовок
    </div>
  </div>
  <div
    className="CarouselUniversal__wrapper"
  >
    <ul
      className="CarouselUniversal__list"
      onScroll={[Function]}
    >
      <li
        className="CarouselUniversal__item someClassName"
        key="item-0"
      >
        <div
          className="someClassName"
          key="0"
        >
          Здесь могла бы быть ваша реклама
        </div>
      </li>
      <li
        className="CarouselUniversal__item someClassName"
        key="item-1"
      >
        <div
          className="someClassName"
          key="1"
        >
          Здесь могла бы быть ваша реклама
        </div>
      </li>
      <li
        className="CarouselUniversal__item someClassName"
        key="item-2"
      >
        <div
          className="someClassName"
          key="2"
        >
          Здесь могла бы быть ваша реклама
        </div>
      </li>
      <li
        className="CarouselUniversal__item someClassName"
        key="item-3"
      >
        <div
          className="someClassName"
          key="3"
        >
          Здесь могла бы быть ваша реклама
        </div>
      </li>
      <li
        className="CarouselUniversal__item someClassName"
        key="item-4"
      >
        <div
          className="someClassName"
          key="4"
        >
          Здесь могла бы быть ваша реклама
        </div>
      </li>
      <li
        className="CarouselUniversal__item someClassName"
        key="item-5"
      >
        <div
          className="someClassName"
          key="5"
        >
          Здесь могла бы быть ваша реклама
        </div>
      </li>
      <li
        className="CarouselUniversal__item someClassName"
        key="item-6"
      >
        <div
          className="someClassName"
          key="6"
        >
          Здесь могла бы быть ваша реклама
        </div>
      </li>
      <li
        className="CarouselUniversal__item someClassName"
        key="item-7"
      >
        <div
          className="someClassName"
          key="7"
        >
          Здесь могла бы быть ваша реклама
        </div>
      </li>
      <li
        className="CarouselUniversal__item someClassName"
        key="item-8"
      >
        <div
          className="someClassName"
          key="8"
        >
          Здесь могла бы быть ваша реклама
        </div>
      </li>
      <li
        className="CarouselUniversal__item someClassName"
        key="item-9"
      >
        <div
          className="someClassName"
          key="9"
        >
          Здесь могла бы быть ваша реклама
        </div>
      </li>
    </ul>
    <div
      className="CarouselUniversal__navButton"
      style={
        Object {
          "right": -18,
          "top": "calc(50% - 18px)",
        }
      }
    >
      <NavigationButton
        onClick={[Function]}
        type="next"
      />
    </div>
  </div>
  <div
    className="CarouselUniversal__footer"
  >
    Какой-то футер
  </div>
</div>
`;

exports[`должен отрендерить карусель в мобильной версии 1`] = `
<div
  className="CarouselUniversal  CarouselUniversal_dir_horizontal CarouselUniversal_mobile"
>
  <div
    className="CarouselUniversal__header"
  >
    <div
      className="CarouselUniversal__title"
    >
      Какой-то заголовок
    </div>
  </div>
  <div
    className="CarouselUniversal__wrapper"
  >
    <ul
      className="CarouselUniversal__list"
      onScroll={[Function]}
    >
      <li
        className="CarouselUniversal__item someClassName"
        key="item-0"
      >
        <div
          className="someClassName"
          key="0"
        >
          Здесь могла бы быть ваша реклама
        </div>
      </li>
      <li
        className="CarouselUniversal__item someClassName"
        key="item-1"
      >
        <div
          className="someClassName"
          key="1"
        >
          Здесь могла бы быть ваша реклама
        </div>
      </li>
      <li
        className="CarouselUniversal__item someClassName"
        key="item-2"
      >
        <div
          className="someClassName"
          key="2"
        >
          Здесь могла бы быть ваша реклама
        </div>
      </li>
      <li
        className="CarouselUniversal__item someClassName"
        key="item-3"
      >
        <div
          className="someClassName"
          key="3"
        >
          Здесь могла бы быть ваша реклама
        </div>
      </li>
      <li
        className="CarouselUniversal__item someClassName"
        key="item-4"
      >
        <div
          className="someClassName"
          key="4"
        >
          Здесь могла бы быть ваша реклама
        </div>
      </li>
      <li
        className="CarouselUniversal__item someClassName"
        key="item-5"
      >
        <div
          className="someClassName"
          key="5"
        >
          Здесь могла бы быть ваша реклама
        </div>
      </li>
      <li
        className="CarouselUniversal__item someClassName"
        key="item-6"
      >
        <div
          className="someClassName"
          key="6"
        >
          Здесь могла бы быть ваша реклама
        </div>
      </li>
      <li
        className="CarouselUniversal__item someClassName"
        key="item-7"
      >
        <div
          className="someClassName"
          key="7"
        >
          Здесь могла бы быть ваша реклама
        </div>
      </li>
      <li
        className="CarouselUniversal__item someClassName"
        key="item-8"
      >
        <div
          className="someClassName"
          key="8"
        >
          Здесь могла бы быть ваша реклама
        </div>
      </li>
      <li
        className="CarouselUniversal__item someClassName"
        key="item-9"
      >
        <div
          className="someClassName"
          key="9"
        >
          Здесь могла бы быть ваша реклама
        </div>
      </li>
    </ul>
  </div>
  <div
    className="CarouselUniversal__footer"
  >
    Какой-то футер
  </div>
</div>
`;
